update translations for the RunTaskError
[#131231307]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -2600,6 +2600,10 @@
     "translation": "Fehler beim Abrufen der Stacks: {{.Error}}"
   },
   {
+    "id": "Error running task: {{.CloudControllerMessage}}",
+    "translation": ""
+  },
+  {
     "id": "Error saving manifest: {{.Error}}",
     "translation": "Fehler beim Speichern des Manifests: {{.Error}}"
   },
