return a friendlier error when creating tasks in a diegoless environment
[finish #134042885, #131231307]

Signed-off-by: Anand Gaitonde <agaitonde@pivotal.io>

--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1432,6 +1432,10 @@
     "translation": "Tags: {{.Tags}}"
   },
   {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
     "translation": ""
   },
