--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -5020,6 +5020,10 @@
     "translation": "Espacio de destino {{.SpaceName}}\n"
   },
   {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
     "translation": ""
   },
