--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -1440,6 +1440,10 @@
     "translation": "TOTAL_MEMORY"
   },
   {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
     "translation": ""
   },
