--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1468,6 +1468,10 @@
     "translation": "Tags: {{.Tags}}"
   },
   {
+    "id": "Task workers are unavailable.",
+    "translation": ""
+  },
+  {
     "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
     "translation": ""
   },
