--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -228,8 +228,8 @@
     "translation": "API endpoint: {{.Endpoint}}"
   },
   {
-    "id": "API version",
-    "translation": ""
+    "id": "API version:",
+    "translation": "API version:"
   },
   {
     "id": "APPS",
