--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -20,8 +20,8 @@
     "translation": "API URL to target"
   },
   {
-    "id": "API version",
-    "translation": ""
+    "id": "API version:",
+    "translation": "API version:"
   },
   {
     "id": "All available CLI commands",
