--- a/cf/i18n/resources/es-es.untranslated.json
+++ b/cf/i18n/resources/es-es.untranslated.json
@@ -28,8 +28,8 @@
     "translation": "API URL to target"
   },
   {
-    "id": "API version",
-    "translation": ""
+    "id": "API version:",
+    "translation": "API version:"
   },
   {
     "id": "APPS",
