--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -24,8 +24,8 @@
     "translation": "API URL to target"
   },
   {
-    "id": "API version",
-    "translation": ""
+    "id": "API version:",
+    "translation": "API version:"
   },
   {
     "id": "APP_INSTANCES",
