--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -228,7 +228,7 @@
     "translation": "Terminal de API: {{.Endpoint}}"
   },
   {
-    "id": "API version",
+    "id": "API version:",
     "translation": ""
   },
   {
