handle errors for API endpoint mismatches
[#106354600]

Signed-off-by: Jeff Pak <jeffrey.pak@emc.com>

--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -212,6 +212,10 @@
     "translation": "API endpoint (e.g. https://api.example.com)"
   },
   {
+    "id": "API endpoint not found at '{{.URL}}'",
+    "translation": ""
+  },
+  {
     "id": "API endpoint:",
     "translation": "API endpoint:"
   },
