Fix prompting users in locales other than en-US
terminal.UI.Confirm retured true when the user's entry after
transformation to lower case matched either "y", "yes" or the
translation of T("yes").

This did not work for most of the translated prompts.

E.g. "Do you want to install the plugin {{.Plugin}}? (y or n)"
is translated to
"... installieren? (J oder N)"

This only works if "y" is translated and terminal.UI.Confirm also
checks against T("y").

--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -6396,6 +6396,10 @@
     "translation": "Version"
   },
   {
+    "id": "y",
+    "translation": "j"
+  },
+  {
     "id": "yes",
     "translation": "Ja"
   },
