--- a/cf/i18n/resources/es-es.all.json
+++ b/cf/i18n/resources/es-es.all.json
@@ -6396,6 +6396,10 @@
     "translation": "versión"
   },
   {
+    "id": "y",
+    "translation": "s"
+  },
+  {
     "id": "yes",
     "translation": "sí"
   },
