--- a/cf/i18n/resources/pt-br.all.json
+++ b/cf/i18n/resources/pt-br.all.json
@@ -6396,6 +6396,10 @@
     "translation": "versão"
   },
   {
+    "id": "y",
+    "translation": "s"
+  },
+  {
     "id": "yes",
     "translation": "Sim"
   },
