--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -6396,6 +6396,10 @@
     "translation": "version"
   },
   {
+    "id": "y",
+    "translation": "y"
+  },
+  {
     "id": "yes",
     "translation": "yes"
   },
