--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -6396,6 +6396,10 @@
     "translation": ""
   },
   {
+    "id": "y",
+    "translation": "o"
+  },
+  {
     "id": "yes",
     "translation": "oui"
   },
