--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -6396,6 +6396,10 @@
     "translation": "versione"
   },
   {
+    "id": "y",
+    "translation": "s"
+  },
+  {
     "id": "yes",
     "translation": "sì"
   },
