--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -896,6 +896,10 @@
     "translation": ""
   },
   {
+    "id": "CF_NAME terminate-task APP_NAME TASK_ID\\n\\nEXAMPLES:\\n   CF_NAME terminate-task my-app 3",
+    "translation": ""
+  },
+  {
     "id": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]",
     "translation": "CF_NAME unbind-route-service DOMAIN SERVICE_INSTANCE [--hostname HOSTNAME] [--path PATH] [-f]"
   },
@@ -1376,6 +1380,10 @@
     "translation": ""
   },
   {
+    "id": "TASKS:",
+    "translation": ""
+  },
+  {
     "id": "TOTAL_MEMORY",
     "translation": "TOTAL_MEMORY"
   },
@@ -1385,6 +1393,14 @@
   },
   {
     "id": "Task {{.TaskSequenceID}} has been submitted successfully for execution.",
+    "translation": ""
+  },
+  {
+    "id": "Terminate a running task of an app",
+    "translation": ""
+  },
+  {
+    "id": "Terminating task {{.TaskSequenceID}} of app {{.AppName}} in org {{.OrgName}} / space {{.SpaceName}} as {{.CurrentUser}}...",
     "translation": ""
   },
   {
@@ -1636,6 +1652,10 @@
     "translation": "The stack name"
   },
   {
+    "id": "The task's unique sequence ID",
+    "translation": ""
+  },
+  {
     "id": "The token",
     "translation": "The token"
   },
@@ -1752,6 +1772,10 @@
     "translation": "repo-plugins"
   },
   {
+    "id": "run-task",
+    "translation": ""
+  },
+  {
     "id": "service_broker_guid IN ",
     "translation": "service_broker_guid IN "
   },
@@ -1761,6 +1785,14 @@
   },
   {
     "id": "start time",
+    "translation": ""
+  },
+  {
+    "id": "tasks",
+    "translation": ""
+  },
+  {
+    "id": "terminate-task",
     "translation": ""
   },
   {
