--- a/cf/i18n/resources/fr-fr.untranslated.json
+++ b/cf/i18n/resources/fr-fr.untranslated.json
@@ -448,7 +448,7 @@
     "translation": "CF_NAME routes [--orglevel]"
   },
   {
-    "id": "CF_NAME run-task APP_NAME COMMAND\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\"",
+    "id": "CF_NAME run-task APP_NAME COMMAND [--name TASK_NAME]\\n\\nEXAMPLES:\\n   CF_NAME run-task my-app \\\"bundle exec rake db:migrate\\\" --name migrate",
     "translation": ""
   },
   {
@@ -806,6 +806,10 @@
   {
     "id": "Max wait time to establish a connection, including name resolution, in seconds",
     "translation": "Max wait time to establish a connection, including name resolution, in seconds"
+  },
+  {
+    "id": "Name to give the task (generated if omitted)",
+    "translation": ""
   },
   {
     "id": "No value provided for flag: ",
